adicionando as imagens do campo de batalha

--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
   </header>
   <main class="play-area">
     <div class="wrapper-button-move">
-      <button class="button-move">Pedra</button>
-      <button class="button-move">Papel</button>
-      <button class="button-move">Tesoura</button>
+      <button class="button-move move-stone1">Pedra</button>
+      <button class="button-move move-paper1">Papel</button>
+      <button class="button-move move-scissors1">Tesoura</button>
     </div>
     <div class="wrapper-battlefield">
-      <div class="battlefield"></div>
+      <div class="battlefield" id="box-move1"></div>
       <span class="battlefield-separator">vs</span>
-      <div class="battlefield"></div>
+      <div class="battlefield" id="box-move2"></div>
     </div>
     <div class="wrapper-button-move">
-      <button class="button-move">Pedra</button>
-      <button class="button-move">Papel</button>
-      <button class="button-move">Tesoura</button>
+      <button class="button-move move-stone2">Pedra</button>
+      <button class="button-move move-paper2">Papel</button>
+      <button class="button-move move-scissors2">Tesoura</button>
     </div>
   </main>
   <footer class="config-box">
     <button class="button-move">Iniciar</button>
     <button class="button-move">Reset</button>
   </footer>
+  <script src="/index.js"></script>
 </body>
 
 </html>
