começando a adaptar os botões iniciar e reset

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <h1 class="winner-title">Jogadora 1 ganhou!</h1>
     <div class="scoreboard-box">
       <span class="player">Jogador 1</span>
-      <span class="score-player">01</span>
+      <span class="score-player" id="score1">00</span>
       <span class="separator-score">VS</span>
-      <span class="score-player">01</span>
+      <span class="score-player" id="score2">00</span>
       <span class="player">Jogador 1</span>
     </div>
   </header>
@@ -41,8 +41,8 @@
     </div>
   </main>
   <footer class="config-box">
-    <button class="button-move">Iniciar</button>
-    <button class="button-move">Reset</button>
+    <button class="button-move" id="button-start">Iniciar</button>
+    <button class="button-move" id="button-reset">Reset</button>
   </footer>
   <script src="/index.js"></script>
 </body>
