--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header">
-    <h1 class="winner-title">Jogadora 1 ganhou!</h1>
+    <h1 class="winner-title">clique em iniciar</h1>
     <div class="scoreboard-box">
       <span class="player">Jogador 1</span>
       <span class="score-player" id="score1">00</span>
