--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <button class="button-move" id="button-start">Iniciar</button>
     <button class="button-move" id="button-reset">Reset</button>
   </footer>
-  <script src="/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
